syntax = "proto3";

package morecat.api.blog;

message BlogState {
  string id = 1;
  string name = 2;
  string description = 3;
  string mode = 4;
}
