syntax = "proto3";

package morecat.api;

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";

service MoreCatService {
  option (akkaserverless.codegen) = {
    value_entity: {
      name: "morecat.api.blog.BlogHandler"
      entity_type: "blogs"
      state: "morecat.api.blog.BlogState"
    }
  };

  rpc CreateBlog(CreateBlogRequest) returns (google.protobuf.Empty) {}
  rpc GetBlog(GetBlogRequest) returns (BlogResponse) {}

}

message CreateBlogRequest {
  string id = 1 [(akkaserverless.field).entity_key = true];
  string name = 2;
  string description = 3;
  BlogMode mode = 4;
}

enum BlogMode {
  PUBLIC = 0;
  PRIVATE = 1;
}

message GetBlogRequest {
  string id = 1 [(akkaserverless.field).entity_key = true];
}

message BlogResponse {
  string id = 1 [(akkaserverless.field).entity_key = true];
  string name = 2;
  string description = 3;
  string mode = 4;
}
